--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
 
-# Build
-- docker build -t reverseproxy ./reverseproxy
+services:
+  - docker
 
-# Tagging
-- docker tag reverseproxy desigerseyi12345/reverseproxy:v1
+# Pre-testing installs
+install:
+  - echo "nothing needs to be installed"
 
-# Push
-# Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings.
-- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- docker push designerseyi12345/reverseproxy:v1
+# Scripts to be run such as tests
+before_script:
+  - echo "no tests"
+
+script:
+  - docker --version # print the version for logging
+  - docker build -t reverseproxy ./udagram-reverseproxy
+  - docker tag reverseproxy desigerseyi12345/reverseproxy:v1
+
+after_success:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push designerseyi12345/reverseproxy:v1
