--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - docker tag udagram-api-user desigerseyi12345/udagram-api-user:v1
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker tag udagram-api-feed desigerseyi12345/udagram-api-feed:v1
-  - docker build -t reverseproxy ./udagram-reverseproxy
+  - docker build -t reverseproxy ./udagram--reverseproxy
   - docker tag reverseproxy desigerseyi12345/reverseproxy:v1
   - docker build -t udagram-api-frontend ./udagram-api-frontend
   - docker tag udagram-api-frontend desigerseyi12345/udagram-api-frontend:v1
