--- a/.travis.yml
+++ b/.travis.yml
@@ -12,18 +12,18 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t udagram-api-user ./udagram-api-user
-  - docker tag udagram-api-user designerseyi12345/udagram-api-user:v1
-  - docker build -t udagram-api-feed ./udagram-api-feed 
-  - docker tag udagram-api-feed designerseyi12345/udagram-api-feed:v1
-  - docker build -t reverseproxy ./udagram--reverseproxy 
-  - docker tag reverseproxy designerseyi12345/reverseproxy:v1
-  - docker build -t udagram-frontend ./udagram-frontend 
-  - docker tag udagram-frontend designerseyi12345/udagram-frontend:v1
+  - docker build -t test-udagram-api-user ./udagram-api-user
+  - docker tag test-udagram-api-feed designerseyi12345/udagram-api-feed:latest
+  - docker build -t test-udagram-api-feed ./udagram-api-feed 
+  - docker tag test-udagram-api-feed designerseyi12345/udagram-api-feed:latest
+  - docker build -t test-reverseproxy ./udagram--reverseproxy 
+  - docker tag test-reverseproxy designerseyi12345/reverseproxy:latest
+  - docker build -t test-udagram-frontend ./udagram-frontend 
+  - docker tag test-udagram-frontend designerseyi12345/udagram-frontend:latest
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push designerseyi12345/udagram-api-user:v1
+  - docker push designerseyi12345/udagram-api-user
   - docker push designerseyi12345/udagram-api-feed
   - docker push designerseyi12345/reverseproxy
   - docker push designerseyi12345/udagram-api-frontend
