--- a/env-secret.yaml
+++ b/env-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: default
 type: Opaque
 data:
-    POSTGRES_PASSWORD: dWRhZ3JhbXBhc3N3b3JkCg==
+    POSTGRES_PASSWORD: MTIzNDU2NzgK
     JWT_SECRET: bW9ua2llcmJ1c2luZXNzCg==
