--- a/udagram-api-feed/.env
+++ b/udagram-api-feed/.env
@@ -1,10 +1,10 @@
 POSTGRES_USERNAME = postgres
-POSTGRES_PASSWORD = udagrampassword
-POSTGRES_HOST = udagramdb.cos3zvn17lkj.us-east-1.rds.amazonaws.com
+POSTGRES_PASSWORD = 12345678
+POSTGRES_HOST = udagram-db.cycjvob3hlvl.us-east-1.rds.amazonaws.com
 POSTGRES_DB = postgres
 DB_DIALECT = postgres
 AWS_REGION = us-east-1
-AWS_PROFILE= project3
+AWS_PROFILE= default
 AWS_BUCKET = udagram-monolith-microservices
 JWT_SECRET = monkierbusiness
 URL = http://localhost:8100
